# NomogrammsCalculator

./: .gitignore  CMakeLists.txt  NomogrammCalculator.cpp  NomogrammCalculator.h  NomogrammCalculator.ui  README.md  configure.bat  configure_clear_build.bat  configure_db_editor.bat  create_db.sql  create_db_dump.sql  db.accdb  main.cpp  nomogramm_example.gdw  nomogramms_example.xlsx  nomogramms_example_1.csv  nomogramms_example_1.xlsx  nomogramms_example_2.csv  nomogramms_example_2.xlsx
db_editor/: CMakeLists.txt  TreeItem.cpp  TreeItem.h  TreeViewModel.cpp  TreeViewModel.h  choose_item_type_dlg.cpp  choose_item_type_dlg.h  choose_item_type_dlg.ui  choose_nn.cpp  choose_nn.h  choose_nn.ui  choose_nomogramm_picture_dlg.cpp  choose_nomogramm_picture_dlg.h  choose_nomogramm_picture_dlg.ui  common_macros.h  db_executor.cpp  db_executor.h  db_objs_state.cpp  db_objs_state.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  measures_list_dlg.cpp  measures_list_dlg.h  measures_list_dlg.ui  obj_properties_dlg.cpp  obj_properties_dlg.h  obj_properties_dlg.ui  object_measure_unit_dlg.cpp  object_measure_unit_dlg.h  object_measure_unit_dlg.ui  properties_table_item.h  properties_table_model.cpp  properties_table_model.h  property_value_delegate.cpp  property_value_delegate.h  set_bypass_rule_args_dlg.cpp  set_bypass_rule_args_dlg.h  set_bypass_rule_args_dlg.ui  (+5 more)
db_state/: CMakeLists.txt  db_state.cpp  db_state.h  db_state_factory.cpp  db_state_factory.h  ms_access_db_state.cpp  ms_access_db_state.h  mysql_db_state.cpp  mysql_db_state.h  properties.h
inc/common/: DBObject.h  IOData.h  Measure.h  MeasureUnit.h  Unit.h  macros.h
inc/db/: DataBaseWrapper.h  db_state.h  db_state_factory.h  ms_access_db_state.h  properties.h
inc/exceptions/: db_exception.h
inc/nomogramms/: BypassRule.h  DBObject.h  ExpressionExecutor.h  Graphics.h  ICalculeable.h  IOData.h  Measure.h  MeasureUnit.h  Methodology.h  NNWrapper.h  Nomogramm.h  NomogrammsEnums.h  RuleParser.h  Unit.h
ml/: AbstractNN.cpp  AbstractNN.h  CMakeLists.txt  NNCouch.cpp  NNCouch.h  NNStorage.cpp  NNStorage.h  criterion.cpp  criterion.h  dataset.cpp  dataset.h  includes.h  optimizer.cpp  optimizer.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  DBObject.cpp  IOData.cpp  Measure.cpp  MeasureUnit.cpp  Unit.cpp
src/db/: CMakeLists.txt  DataBaseWrapper.cpp  db_state.cpp  ms_access_db_state.cpp
src/exceptions/: CMakeLists.txt  db_exception.cpp
src/nomogramms/: BypassRule.cpp  CMakeLists.txt  DBObject.cpp  ExpressionExecutor.cpp  Graphics.cpp  IOData.cpp  Measure.cpp  MeasureUnit.cpp  Methodology.cpp  NNWrapper.cpp  Nomogramm.cpp  RuleParser.cpp  Unit.cpp
ui/: CMakeLists.txt  TreeItem.cpp  TreeItem.h  learning_stats.cpp  learning_stats.h  main_ui.cpp  main_ui.h  nn_creator.cpp  nn_creator.h  nomogramms_viewer.cpp  nomogramms_viewer.h  test_nn.cpp  test_nn.h  view_nn.cpp  view_nn.h
ui/ui/: learning_stats.ui  main_ui.ui  main_ui_resources.qrc  nn_creator.ui  nomogramms_viewer.ui  test_nn.ui  view_nn.ui
xml/: CMakeLists.txt  config.xml  xml.cpp  xml.h
